# clean-dns

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  config.yaml  doh_example_config.yaml  proxy_domains.txt  socks5_example_config.yaml  verify.sh
.agent/workflows/: sync_artifacts.md
docs/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved  implementation_plan.md.resolved.0  implementation_plan.md.resolved.1  implementation_plan.md.resolved.2  implementation_plan.md.resolved.3  implementation_plan.md.resolved.4  implementation_plan.md.resolved.5  implementation_plan.md.resolved.6  implementation_plan.md.resolved.7  plugin_comparison.md  task.md  task.md.metadata.json  task.md.resolved.0  task.md.resolved.1  task.md.resolved.10  task.md.resolved.2  task.md.resolved.3  task.md.resolved.4  task.md.resolved.5  task.md.resolved.6  task.md.resolved.7  task.md.resolved.8  task.md.resolved.9  walkthrough.md  walkthrough.md.metadata.json  walkthrough.md.resolved  walkthrough.md.resolved.0  walkthrough.md.resolved.1  walkthrough.md.resolved.2  walkthrough.md.resolved.3  walkthrough.md.resolved.4  walkthrough.md.resolved.5  walkthrough.md.resolved.6
src/: api.rs  config.rs  lib.rs  main.rs  server.rs  statistics.rs
src/plugins/: cache.rs  delay_plugin.rs  domain_set.rs  fallback.rs  forward.rs  geosite.rs  hosts.rs  if_plugin.rs  ip_set.rs  matcher.rs  mod.rs  reject_plugin.rs  return_plugin.rs  sequence.rs  system.rs  ttl.rs
src/proto/: router.proto
tests/: integration.rs
